--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         <li>
             <a href="ЛР13-14/index.html">Лабораторная работа №13-14</a>
         </li>
+        <li>
+            <a href="ЛР15-16/index.html">Лабораторная работа №15-16</a>
+        </li>
     </ul>
    </div>
 </body>
