--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         <li>
             <a href="ЛР15-16/index.html">Лабораторная работа №15-16</a>
         </li>
+        <li>
+            <a href="ЛР17/index.html">Лабораторная работа №17</a>
+        </li>
     </ul>
    </div>
 </body>
