--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
             <a href="ЛР15-16/index.html">Лабораторная работа №15-16</a>
         </li>
         <li>
-            <a href="ЛР17/index.html">Лабораторная работа №17</a>
+            <a href="ЛР17/index.html">Лабораторная работа №17(часть из примеров)</a>
+        </li>
+        <li>
+            <a href="ЛР17/Интерфейсы событий/index.html">Лабораторная работа №17(Интерфейсные события)</a>
         </li>
     </ul>
    </div>
