--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a href="ЛР17/index.html">Лабораторная работа №17(часть из примеров)</a>
         </li>
         <li>
-            <a href="ЛР17/Интерфейсы событий/index.html">Лабораторная работа №17(Интерфейсные события)</a>
+            <a href="Интерфейсы событий/index.html">Лабораторная работа №17(Интерфейсные события)</a>
         </li>
     </ul>
    </div>
