--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
         <li>
             <a href="Интерфейсы событий/index.html">Лабораторная работа №17(Интерфейсные события)</a>
         </li>
+         <li>
+            <a href="ЛР18-20/index.html">Лабораторная работа №18-20(Пользовательская форма + куки)</a>
+        </li>
+         <li>
+            <a href="ЛР20 джисон/index.html">Лабораторная работа №19 JSON</a>
+        </li>
     </ul>
    </div>
 </body>
